# ml-ai-swe-courses

./: .gitignore  README.md
databases/: A0_setup.sh  A0_verify_setup.py  A1_intro_to_databases.md  B1_sql_fundamentals_sqlite.py  B1_sqlite_demo.db  B2_postgresql_intro_psycopg3.py  B3_rag_db_design_postgres_psycopg3.py  B4_rag_data_ops_postgres_psycopg3.py  B5_sqlalchemy_orm_for_rag.py  C0_intro_nosql_for_rag.md  C1_mongodb_for_rag.py  C2_redis_for_rag.py  C3_vector_databases_for_rag.py  D1_advanced_postgres_transactions.py  D2_production_databases_admin_migrations.py  a-curriculum.md  a-teacher-prompt.md  docker-compose.yml  pyproject.toml
databases/C3_chroma_db_example/: chroma.sqlite3
jax/: 00_jax_vs_pytorch_philosophy.py  01_jax_basics_and_jit.py  02_automatic_differentiation.py  03_vectorization_vmap.py  04_combining_transforms_pytrees.py  05_optimization_optax.py  06_parallelization_pmap.py  07_hf_integration_flax.py  08_finetuning_loop.py  09_A1_advanced_flax_design.py  10_A2_pytorch_to_flax_conversion.py  11_C6_debugging_profiling.py  requirements.txt  teacher-prompt.md
ml-papers-maths/: A1_introduction_to_mathematical_notation.md  A2_linear_algebra_in_ml_formulas.md  A3_probability_and_statistics_in_ml_formulas.md  A4_calculus_in_ml_formulas.md  B1_vector_representation_formulas.md  B2_transformer_attention_formulas.md  B3_common_llm_layer_formulas.md  curriculum.md  teacher-prompt.md
pytorch/: 01_pt_jax_philosophy.py  02_tensors_and_autograd.py  03_building_networks_torch_nn.py  04_debugging_pytorch.py  05_data_loading.py  06_training_loop.py  (+18 more)
(+25 files in other folders)
